# nsec2020-weakhash

./: .gitignore  README.md  change-mark.c  ideas.txt  weakhash.cpp
weakhash_rs/: Cargo.toml  bindings.h  build.rs
weakhash_rs/benches/: benchmark.rs
weakhash_rs/src/: des.rs  lib.rs  main.rs  mitm.rs
