[package]
name = "weakhash_rs"
version = "0.1.0"
authors = ["Jesse Emond <emond.jesse@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benchmark"
harness = false